--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Brenton Hershner",
+  "name": "brentonhershner.com",
   "private": true,
   "description": "Personal Website for Brenton Hershner",
   "version": "0.1.0",
