--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "brentonhershner",
+  "name": "brentonhershner.com",
   "private": true,
   "description": "Personal Website for Brenton Hershner",
   "version": "0.1.0",
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -21,9 +21,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/brentonhershner/brentonhershner"
+    "url": "https://github.com/brentonhershner/brentonhershner.com"
   },
   "bugs": {
-    "url": "https://github.com/brentonhershner/brentonhershner/issues"
+    "url": "https://github.com/brentonhershner/brentonhershner.com/issues"
   }
 }
