--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "gatsby": "^3.6.2",
+    "gatsby-plugin-react-helmet": "^4.7.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "repository": {
     "type": "git",
