--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.0",
+    "@material-ui/icons": "^5.0.0-beta.0",
+    "@material-ui/styles": "^5.0.0-beta.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.6.2",
-    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-emotion": "^6.9.0",
     "gatsby-plugin-react-helmet": "^4.7.1",
+    "gatsby-plugin-styled-components": "^4.9.0",
+    "gatsby-theme-material-ui": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.0"
   },
   "repository": {
     "type": "git",
