--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "gatsby": "^3.6.2",
+    "@material-ui/styles": "^4.11.4",
+    "gatsby": "^3.9.1",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
     "react": "^17.0.1",
@@ -28,5 +29,9 @@
   },
   "bugs": {
     "url": "https://github.com/brentonhershner/brentonhershner.com/issues"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "typescript": "^4.3.5"
   }
 }
