--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-beta.0",
-    "@material-ui/icons": "^5.0.0-beta.0",
-    "@material-ui/styles": "^5.0.0-beta.0",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.9.1",
     "gatsby-plugin-emotion": "^6.9.0",
