--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^3.9.1",
     "gatsby-plugin-emotion": "^6.9.0",
     "gatsby-plugin-react-helmet": "^4.7.1",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-theme-material-ui": "^2.0.1",
     "react": "^17.0.1",
