--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.9.1",
     "gatsby-plugin-emotion": "^6.9.0",
+    "gatsby-plugin-gatsby-cloud": "^2.9.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-styled-components": "^4.9.0",
