--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
+    "an-array-of-english-words": "^2.0.0",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.9.1",
     "gatsby-plugin-emotion": "^6.9.0",
