--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.4.0",
@@ -27,6 +27,7 @@
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-theme-material-ui": "^2.0.1",
+    "just-unique": "^4.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "jest": "^27.5.1",
     "typescript": "^4.3.5"
   }
 }
