--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/styles": "^4.11.4",
     "an-array-of-english-words": "^2.0.0",
     "babel-plugin-styled-components": "^1.13.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "gatsby": "^3.9.1",
     "gatsby-plugin-emotion": "^6.9.0",
     "gatsby-plugin-gatsby-cloud": "^2.9.1",
@@ -42,6 +43,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.29.2",
     "jest": "^27.5.1",
     "typescript": "^4.3.5"
   }
