--- a/package.json
+++ b/package.json
@@ -13,32 +13,19 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/styles": "^4.11.5",
-    "an-array-of-english-words": "^2.0.0",
-    "babel-plugin-styled-components": "^2.0.7",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "gatsby": "^5.3.3",
-    "gatsby-plugin-emotion": "^5.4.0",
-    "gatsby-plugin-gatsby-cloud": "^1.0.2",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-styled-components": "^3.10.0",
-    "gatsby-theme-material-ui": "^5.3.0",
-    "just-unique": "^4.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
+    "gatsby": "^5.5.0",
+    "gatsby-plugin-emotion": "^8.5.0",
+    "gatsby-plugin-gatsby-cloud": "^5.5.0",
+    "gatsby-plugin-react-helmet": "^6.5.0",
+    "gatsby-plugin-styled-components": "^6.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/brentonhershner/brentonhershner.com"
-  },
-  "bugs": {
-    "url": "https://github.com/brentonhershner/brentonhershner.com/issues"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -46,5 +33,12 @@
     "eslint-plugin-react": "^7.29.2",
     "jest": "^27.5.1",
     "typescript": "^4.3.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brentonhershner/brentonhershner.com"
+  },
+  "bugs": {
+    "url": "https://github.com/brentonhershner/brentonhershner.com/issues"
   }
 }
